--- a/web_flask/templates/5-number.html
+++ b/web_flask/templates/5-number.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>HBNB</title>
-</head>
-<body>
-    <h1>Number: {{ number }}</h1>
-</body>
-</html>
+<HTML lang="en">
+<HEAD>
+    <META charset="UTF-8">
+    <TITLE>HBNB</TITLE>
+</HEAD>
+<BODY>
+    <H1>Number: {{ number }}</H1>
+</BODY>
+</HTML>
